fixed links, realigned objects

--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -335,11 +335,11 @@ a:focus {
 }
 
 .span2 {
-  width: 140px;
+  width: 120px;
 }
 
 .span1 {
-  width: 60px;
+  width: 40px;
 }
 
 .offset12 {
