--- a/app/assets/stylesheets/statuses.css.scss
+++ b/app/assets/stylesheets/statuses.css.scss
@@ -18,14 +18,18 @@
 
 .status .admin
 {
-	display: hidden;	
+	display: none;	
 }
 
-.status.hover .admin
+.status:hover .admin
 {
 	display: inline;
 }
 
+.dialog
+{
+  margin-top:40px;
+}
 .status-index 
 {
   overflow: auto;
